--- a/src/c#/基础语法/ConsoleApp.BestPractices/ConsoleApp.BestPractices.csproj
+++ b/src/c#/基础语法/ConsoleApp.BestPractices/ConsoleApp.BestPractices.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Others\" />
+  </ItemGroup>
+
 </Project>
