--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /src/java/基础语法/.idea/vcs.xml
+/src/python/基础语法/.vscode
+/src/python/基础语法/.vs
