--- a/src/java/常用功能及组件/AboutJson/pom.xml
+++ b/src/java/常用功能及组件/AboutJson/pom.xml
@@ -8,10 +8,10 @@
         <version>2.1.6.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.wingontravel</groupId>
-    <artifactId>json-utils</artifactId>
+    <groupId>yongfa365</groupId>
+    <artifactId>AboutJson</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>json-utils</name>
+    <name>AboutJson</name>
     <description>Demo project for Spring Boot</description>
 
     <properties>
