schedule完成初级版本

--- a/src/java/常用功能及组件/schedule/AboutSchedule/.gitignore
+++ b/src/java/常用功能及组件/schedule/AboutSchedule/.gitignore
@@ -1,9 +1,9 @@
-# æŸ³æ°¸æ³•æ•´ç†ï¼Œæœ‰ç–‘é—®æˆ–éœ€è¦æ·»åŠ è¯·è”ç³»æˆ‘
+# ÁøÓÀ·¨ÕûÀí£¬ÓĞÒÉÎÊ»òĞèÒªÌí¼ÓÇëÁªÏµÎÒ
 # https://git-scm.com/docs/gitignore
 # https://git-scm.com/book/en/v2/Git-Basics-Recording-Changes-to-the-Repository#_ignoring
-# dir1/		#å¿½ç•¥æ‰€æœ‰å±‚çº§çš„dir1ç›®å½•
-# /dir1/	#å¿½ç•¥å½“å‰ç›®å½•ä¸‹çš„dir1ç›®å½•
-# *.iml		#å¿½ç•¥æ‰€æœ‰å±‚çº§çš„*.imlæ–‡ä»¶
+# dir1/		#ºöÂÔËùÓĞ²ã¼¶µÄdir1Ä¿Â¼
+# /dir1/	#ºöÂÔµ±Ç°Ä¿Â¼ÏÂµÄdir1Ä¿Â¼
+# *.iml		#ºöÂÔËùÓĞ²ã¼¶µÄ*.imlÎÄ¼ş
 
 ### VS Code/Visual Studio ###
 .vscode/
@@ -15,7 +15,6 @@
 *.iml
 *.ipr
 target/
-out/
 
 ###  NodeJS  ###
 .DS_Store
