--- a/src/java/常用功能及组件/http/AboutApacheHttpClient/pom.xml
+++ b/src/java/常用功能及组件/http/AboutApacheHttpClient/pom.xml
@@ -12,7 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>yongfa365</groupId>
-    <artifactId>ApacheHttpClient</artifactId>
+    <artifactId>AboutApacheHttpClient</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
