完善java @ConfigurationProperties @Value

--- a/src/java/常用功能及组件/spring-boot-profiles/src/main/resources/application-dev-secret.yml
+++ b/src/java/常用功能及组件/spring-boot-profiles/src/main/resources/application-dev-secret.yml
@@ -1,10 +1,10 @@
 spring:
   datasource:
-    hoteldb:
+    HotelDB:
       url: jdbc:mysql://127.0.0.1:3306/hoteldb
       username: dev.hoteldb.username111
       password: devpassword
-    flightdb:
+    FlightDB:
       url: jdbc:mysql://127.0.0.1:3306/flightdb
       username: dev.flightdb.username111
       password: devpassword
